[gd_scene load_steps=28 format=3 uid="uid://cr053t3wiuy1q"]

[ext_resource type="PackedScene" uid="uid://ppm418ox32l3" path="res://characters/player.tscn" id="1_tbgi4"]
[ext_resource type="Texture2D" uid="uid://bt5flqr4ayqxo" path="res://assets/tiles/gentle forest v03.png" id="2_tipki"]
[ext_resource type="Script" uid="uid://dnvbqqixnw7b7" path="res://scripts/world.gd" id="2_ya4ey"]
[ext_resource type="Script" uid="uid://rhj3dnp1jd1i" path="res://scripts/pause_menu.gd" id="4_jyhfs"]
[ext_resource type="PackedScene" uid="uid://c0lerhubg5aa4" path="res://spawner/enemy_spawner.tscn" id="4_ya4ey"]
[ext_resource type="FontFile" uid="uid://d4hesecdrugkx" path="res://fonts/MaestoRegularDemo-nAJV4.otf" id="5_tbgi4"]
[ext_resource type="Script" uid="uid://beri8rwklmxad" path="res://scripts/main.gd" id="6_main"]
[ext_resource type="Script" uid="uid://k0vn0kk2w18j" path="res://scripts/audio_sld.gd" id="6_o6xl0"]
[ext_resource type="Script" uid="uid://cmh8ppui2vmn6" path="res://scripts/fullscreen_tgl.gd" id="7_tipki"]
[ext_resource type="Script" uid="uid://cqjvsmqs2b53y" path="res://scripts/chunk_manager.gd" id="8_eb6dy"]
[ext_resource type="PackedScene" uid="uid://dt463ms013coj" path="res://obstacles/tree_chunk.tscn" id="9_jbj1t"]
[ext_resource type="PackedScene" uid="uid://rnqej1qc62rx" path="res://obstacles/tree.tscn" id="9_muem4"]
[ext_resource type="PackedScene" uid="uid://cqxv44f00rrdj" path="res://obstacles/rock.tscn" id="10_dp3eg"]
[ext_resource type="PackedScene" uid="uid://dpdwxw3fd1xe1" path="res://obstacles/pond.tscn" id="11_0ld40"]
[ext_resource type="PackedScene" uid="uid://gwjndcbv27op" path="res://obstacles/tall_grass.tscn" id="12_gqmmt"]
[ext_resource type="PackedScene" uid="uid://dsl6r7xfels2" path="res://obstacles/bush.tscn" id="13_yc10j"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_eb6dy"]
texture = ExtResource("2_tipki")
1:5/0 = 0
2:5/0 = 0
1:6/0 = 0
2:6/0 = 0

[sub_resource type="TileSet" id="TileSet_jkv2x"]
sources/0 = SubResource("TileSetAtlasSource_eb6dy")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tbgi4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tefeu"]
bg_color = Color(0.5803922, 0.9843137, 0.67058825, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.654902)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o6xl0"]
bg_color = Color(0.6627451, 1, 0.96862745, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tipki"]
bg_color = Color(0.72156864, 0.88235295, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxLine" id="StyleBoxLine_85g3d"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_choun"]
color = Color(0.22745098, 0.5254902, 1, 1)
thickness = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ya4ey"]
bg_color = Color(0.5803922, 0.9843137, 0.67058825, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.654902)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eb6dy"]
bg_color = Color(0.6627451, 1, 0.96862745, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trceg"]
bg_color = Color(0.72156864, 0.88235295, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="main" type="Node2D"]
script = ExtResource("6_main")

[node name="World" type="Node2D" parent="."]
script = ExtResource("2_ya4ey")

[node name="GroundTileMap" type="TileMapLayer" parent="World"]
z_index = -10
z_as_relative = false
tile_set = SubResource("TileSet_jkv2x")

[node name="Player" parent="World" instance=ExtResource("1_tbgi4")]
z_index = 1
position = Vector2(520.00006, 238.00003)

[node name="Camera2D" parent="World/Player" index="3"]
zoom = Vector2(2, 2)

[node name="Spawner" parent="World" node_paths=PackedStringArray("player") instance=ExtResource("4_ya4ey")]
visible = false
z_index = 1
player = NodePath("../Player")

[node name="Chunk_manager" type="Node2D" parent="World" node_paths=PackedStringArray("player", "ground_layer")]
script = ExtResource("8_eb6dy")
player = NodePath("../Player")
ground_layer = NodePath("../GroundTileMap")
tree_scenes = Array[PackedScene]([ExtResource("9_muem4")])
rock_scenes = Array[PackedScene]([ExtResource("10_dp3eg"), ExtResource("9_jbj1t")])
pond_scenes = Array[PackedScene]([ExtResource("11_0ld40")])
grass_scenes = Array[PackedScene]([ExtResource("12_gqmmt")])
bush_scenes = Array[PackedScene]([ExtResource("13_yc10j")])
tree_density = 0.1
pond_density = 0.3
grass_density = 0.05
bush_density = 0.04

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 3
visible = false
script = ExtResource("4_jyhfs")

[node name="Pause" type="Panel" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.25
offset_top = -108.0
offset_right = 103.25
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_tbgi4")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/Pause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.875
offset_top = -109.5
offset_right = 111.875
offset_bottom = 109.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="resume_btn" type="Button" parent="PauseMenu/Pause/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.50980395, 0.67058825, 0.6313726, 1)
theme_override_colors/font_focus_color = Color(0.50980395, 0.67058825, 0.6313726, 1)
theme_override_colors/font_pressed_color = Color(0.50980395, 0.67058825, 0.6313726, 1)
theme_override_colors/font_hover_color = Color(0.50980395, 0.67058825, 0.6313726, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("5_tbgi4")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxFlat_tefeu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o6xl0")
theme_override_styles/hover = SubResource("StyleBoxFlat_tipki")
text = "Resume
"

[node name="setting_btn" type="Button" parent="PauseMenu/Pause/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.50980395, 0.67058825, 0.6313726, 1)
theme_override_colors/font_focus_color = Color(0.50980395, 0.67058825, 0.6313726, 1)
theme_override_colors/font_pressed_color = Color(0.50980395, 0.67058825, 0.6313726, 1)
theme_override_colors/font_hover_color = Color(0.50980395, 0.67058825, 0.6313726, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("5_tbgi4")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxFlat_tefeu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o6xl0")
theme_override_styles/hover = SubResource("StyleBoxFlat_tipki")
text = "Setting"

[node name="back_btn" type="Button" parent="PauseMenu/Pause/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.50980395, 0.67058825, 0.6313726, 1)
theme_override_colors/font_focus_color = Color(0.50980395, 0.67058825, 0.6313726, 1)
theme_override_colors/font_pressed_color = Color(0.50980395, 0.67058825, 0.6313726, 1)
theme_override_colors/font_hover_color = Color(0.50980395, 0.67058825, 0.6313726, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("5_tbgi4")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxFlat_tefeu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o6xl0")
theme_override_styles/hover = SubResource("StyleBoxFlat_tipki")
text = "Exit"

[node name="SettingPanel" type="Panel" parent="PauseMenu"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -261.0
offset_top = -186.5
offset_right = 261.0
offset_bottom = 186.5
grow_horizontal = 2
grow_vertical = 2

[node name="setting_lbl" type="Label" parent="PauseMenu/SettingPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 75.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.50980395, 0.67058825, 0.6313726, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("5_tbgi4")
theme_override_font_sizes/font_size = 78
text = "Setting"
horizontal_alignment = 1
vertical_alignment = 1

[node name="music_lbl" type="Label" parent="PauseMenu/SettingPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 16.0
offset_top = 88.0
offset_right = -386.0
offset_bottom = 123.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.72156864, 0.88235295, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("5_tbgi4")
theme_override_font_sizes/font_size = 28
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX" type="Label" parent="PauseMenu/SettingPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 12.0
offset_top = 157.0
offset_right = -382.0
offset_bottom = 216.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.72156864, 0.88235295, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("5_tbgi4")
theme_override_font_sizes/font_size = 28
text = "SFX
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="music_sld" type="HSlider" parent="PauseMenu/SettingPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 146.0
offset_top = -109.5
offset_right = -4.0
offset_bottom = -51.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_85g3d")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_choun")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_choun")
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource("6_o6xl0")
audio_bus_name = "Music"

[node name="sfx_sld" type="HSlider" parent="PauseMenu/SettingPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 146.0
offset_top = -40.5
offset_right = -4.0
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_85g3d")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_choun")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_choun")
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource("6_o6xl0")
audio_bus_name = "SFX"

[node name="settingback_btn" type="Button" parent="PauseMenu/SettingPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -75.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.50980395, 0.67058825, 0.6313726, 1)
theme_override_colors/font_focus_color = Color(0.50980395, 0.67058825, 0.6313726, 1)
theme_override_colors/font_pressed_color = Color(0.50980395, 0.67058825, 0.6313726, 1)
theme_override_colors/font_hover_color = Color(0.50980395, 0.67058825, 0.6313726, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("5_tbgi4")
theme_override_font_sizes/font_size = 78
theme_override_styles/normal = SubResource("StyleBoxFlat_ya4ey")
theme_override_styles/pressed = SubResource("StyleBoxFlat_eb6dy")
theme_override_styles/hover = SubResource("StyleBoxFlat_trceg")
text = "Back"

[node name="fullscreen-tgl" type="CheckButton" parent="PauseMenu/SettingPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 85.0
offset_top = 40.5
offset_right = -85.0
offset_bottom = 101.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.72156864, 0.88235295, 1, 1)
theme_override_colors/font_focus_color = Color(0.72156864, 0.88235295, 1, 1)
theme_override_colors/font_pressed_color = Color(0.72156864, 0.88235295, 1, 1)
theme_override_colors/font_hover_color = Color(0.72156864, 0.88235295, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.72156864, 0.88235295, 1, 1)
theme_override_colors/font_disabled_color = Color(0.72156864, 0.88235295, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0.6627451, 1, 0.96862745, 1)
theme_override_colors/icon_pressed_color = Color(0.6627451, 1, 0.96862745, 1)
theme_override_colors/icon_hover_color = Color(0.6627451, 1, 0.96862745, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("5_tbgi4")
theme_override_font_sizes/font_size = 55
theme_override_colors/button_checked_color = Color(0.6627451, 1, 0.96862745, 1)
theme_override_colors/button_unchecked_color = Color(0.6627451, 1, 0.96862745, 1)
button_pressed = true
text = "FullScreen"
autowrap_mode = 3
expand_icon = true
script = ExtResource("7_tipki")

[connection signal="pressed" from="PauseMenu/Pause/VBoxContainer/resume_btn" to="PauseMenu" method="_on_resume_btn_pressed"]
[connection signal="pressed" from="PauseMenu/Pause/VBoxContainer/setting_btn" to="PauseMenu" method="_on_setting_btn_pressed"]
[connection signal="pressed" from="PauseMenu/Pause/VBoxContainer/back_btn" to="PauseMenu" method="_on_back_btn_pressed"]
[connection signal="value_changed" from="PauseMenu/SettingPanel/music_sld" to="PauseMenu/SettingPanel/music_sld" method="_on_value_changed"]
[connection signal="value_changed" from="PauseMenu/SettingPanel/sfx_sld" to="PauseMenu/SettingPanel/sfx_sld" method="_on_value_changed"]
[connection signal="pressed" from="PauseMenu/SettingPanel/settingback_btn" to="PauseMenu" method="_on_settingback_btn_pressed"]
[connection signal="toggled" from="PauseMenu/SettingPanel/fullscreen-tgl" to="PauseMenu/SettingPanel/fullscreen-tgl" method="_on_toggled"]

[editable path="World/Player"]
